# canari-forensics

./: .canari.yml.example  .gitignore  LICENSE  README.md  canari  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release-pypi.yml
canari_forensics/: __init__.py  __main__.py  attest.py  audit.py  cli.py  config.py  doctor.py  errors.py  export.py  models.py  patterns.py  pdf.py  receiver.py  reporting.py  status.py  storage.py  summary.py
canari_forensics/parsers/: __init__.py  databricks.py  mlflow_gateway.py  otel.py
docs/: CHECKPOINT.md  PHASE_STATUS.md  PYPI_RELEASE.md
scripts/: demo_local_audit.sh  release_pypi.sh
tests/: test_cli_scan.py  test_databricks_parser.py  test_mlflow_parser.py  test_otel_parser.py  test_phase10_versioning.py  test_phase11_status.py  test_phase12_export_csv.py  test_phase13_attestation.py  test_phase14_custom_patterns.py  test_phase15_doctor.py  test_phase16_summarize.py  test_phase2_sources_and_receiver.py  test_phase3_reporting.py  test_phase4_audit_workflow.py  test_phase5_config_run.py  test_phase6_demo_script.py  test_phase7_packaging.py  test_phase8_cli_validation.py  test_phase9_error_codes.py
tests/fixtures/: custom_patterns.json  mlflow_trace_sample.json  otlp_sample.json
tests/integration/: test_mlflow_otel.py
