[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canari-forensics"
version = "0.1.2"
description = "Scan historical LLM traces for credential leaks and prompt-injection evidence"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Canari" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/cholmess/canari-forensics"
Repository = "https://github.com/cholmess/canari-forensics"
Issues = "https://github.com/cholmess/canari-forensics/issues"

[project.scripts]
canari = "canari_forensics.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["canari_forensics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
